load-tests/snowpeak_passthrough/deployment/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snowpeak-passthrough
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
    - host: bal.perf.test
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: snowpeak-passth
                port:
                  number: 9091
